# kruxos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.well-known/: security.txt
docs/public/: LICENSE  mkdocs.yml  wrangler.toml
docs/public/docs/: getting-started.md  index.md
docs/public/docs/concepts/: index.md  permission-model.md
docs/public/docs/developers/: agent-experience.md  contributing.md  index.md  sdk-guide.md  services.md
docs/public/docs/developers/api/: gateway-jsonrpc.md  gateway-mcp.md  rest-api.md  supervision-events.md
docs/public/docs/developers/capabilities/: agent.md  alerts.md  comms.md  email.md  filesystem.md  git.md  index.md  network.md  process.md  scheduler.md  secrets.md  slack.md  state.md  system.md
docs/public/docs/developers/connectors/: claude.md  gemini.md  local.md  openai.md
docs/public/docs/developers/packs/: documentation-standard.md  publishing.md  quickstart.md  registry.md  service-proxy-packs.md  testing.md
docs/public/docs/enterprise/: architecture.md  compliance.md  contact.md  deployment-guide.md  index.md  pricing.md  security-model.md  service-proxy.md
docs/public/docs/guides/: approval-workflow.md  autonomous-agents.md  backup-restore.md  codex.md  connecting-services.md  dashboard-chat.md  docker-isolation.md  file-transfer.md  first-conversation.md  hermes.md  index.md  managing-agents.md  migration-from-openclaw.md  model-providers.md  monitoring.md  policies.md  remote-access.md  slack-integration.md  troubleshooting.md  updating.md
docs/public/docs/pack-authors/: capability-design-guidelines.md  getting-started.md
docs/public/docs/quickstart/: claude-code.md  cli.md  connect-claude.md  connect-gemini.md  connect-local.md  connect-openai.md  dashboard.md  gmail.md  index.md  install.md
docs/public/docs/security/: whitepaper.md
docs/public/docs/stylesheets/: extra.css
docs/public/docs/troubleshooting/: errors.md
docs/release-notes/: v0.0.1.md  v0.0.2.md
packs/: README.md  index.json
packs/kruxos-code/: .gitignore
packs/kruxos-code/source/: Cargo.toml  README.md  code.wasm  pack.yaml
packs/kruxos-code/source/applier/: Cargo.toml
packs/kruxos-code/source/applier/src/: lib.rs  tests.rs
packs/kruxos-code/source/definitions/: code.edit.yaml  code.multi_edit.yaml
packs/kruxos-code/source/src/: lib.rs
packs/kruxos-code/source/wit/: kruxos-pack.wit
packs/kruxos-hashutils/source/: README.md  pack.yaml
packs/kruxos-hashutils/source/definitions/: hash.yaml
packs/kruxos-hashutils/source/implementations/: hash.py
packs/kruxos-hashutils/source/src/: capabilities.py
packs/kruxos-hashutils/source/tests/: test_capabilities.py  test_hash.py
packs/kruxos-rss-fetch/source/: README.md  pack.yaml
packs/kruxos-rss-fetch/source/definitions/: rss.fetch.yaml
packs/kruxos-rss-fetch/source/src/: capabilities.py
packs/kruxos-rss-fetch/source/tests/: test_capabilities.py
packs/kruxos-urlinfo/source/: README.md  pack.yaml
packs/kruxos-urlinfo/source/definitions/: urlinfo.yaml
packs/kruxos-urlinfo/source/implementations/: urlinfo.py
packs/kruxos-urlinfo/source/src/: capabilities.py
packs/kruxos-urlinfo/source/tests/: test_capabilities.py  test_urlinfo.py
packs/kruxos-weather/: LICENSE
packs/kruxos-weather/source/: README.md  pack.yaml
packs/kruxos-weather/source/definitions/: weather.yaml
packs/kruxos-weather/source/implementations/: weather.py
packs/kruxos-weather/source/src/: capabilities.py
packs/kruxos-weather/source/tests/: test_capabilities.py  test_weather.py
plugins/: README.md
themes/: README.md
